--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
   </head>
   <body>
     <div id="app">
+      <button class="circle">circle</button>
+      <button class="ellipse">circle(ellipse)</button>
+      <button class="rect">rect</button>
+      <button class="square">rect(square)</button>
+      <button class="line">line</button>
       <div id="canvas"></div> <!-- 画布区域 -->
     </div>
     <script type="module" src="./main.ts"></script>
