--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <button class="rect">rect</button>
       <button class="square">rect(square)</button>
       <button class="line">line</button>
+      <button class="polygon">polygon</button>
       <div id="canvas"></div> <!-- 画布区域 -->
     </div>
     <script type="module" src="./main.ts"></script>
